--- a/Project.toml
+++ b/Project.toml
@@ -10,7 +10,10 @@ JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
 [compat]
-julia = "1"
+Interpolations = "0.13"
+JLD2 = "0.4"
+Plots = "1"
+julia = "1.7"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
